--- a/_posts/2018-12-01-15-13.md
+++ b/_posts/2018-12-01-15-13.md
@@ -1,6 +1,5 @@
-====
-마트다운(Makrdown) 문법
-====
-[Title]
-[linkURL]
-[linkURL]: guswnsxodlf.github.io/how-to-write-markdown "출처URL"
+---
+title: 마트다운(Makrdown) 문법
+---
+[Github blog](guswnsxodlf.github.io/how-to-write-markdown "github")
+<guswnsxodlf.github.io/how-to-write-markdown>
